# StarlinkSatellite

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html
.github/workflows/: pages.yml
assets/: index-Blm9RLjl.js  index-D-G9ltuQ.css
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/ingestion/: celestrak.py  parsers.py  planet4589.py  spacetrack.py
backend/app/models/: __init__.py  base.py
backend/app/schemas/: api.py
backend/app/services/: csv_import.py  export.py  inference.py  orbital_math.py  query.py  seed.py  upsert.py
backend/scripts/: export_static_data.py  init_db.py
backend/tests/: conftest.py  test_parsers.py  test_services.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Badge.tsx  Disclaimer.tsx  Layout.tsx  Loading.tsx  SatelliteTable.tsx
frontend/src/pages/: Dashboard.tsx  EvidenceLibrary.tsx  ExportPage.tsx  ReportingPeriods.tsx  SatelliteDetail.tsx  Satellites.tsx  Timeline.tsx
frontend/src/types/: api.ts
frontend/src/utils/: format.ts
frontend/tests/: AppPages.test.tsx  SatelliteTable.test.tsx  setup.ts
sample_data/: seed_satellites.csv
static-data/: dashboard-summary.json  orbital-history.json  report.md  satellites.csv  snapshot-summary.csv  timeline.json
